--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,10 @@ dependencies:
   flutter_bloc: ^8.1.6
   equatable: ^2.0.5
   go_router: ^14.2.0
-  http: ^1.2.2
+  get_it: ^8.0.2
+  dio: ^5.7.0
+  dio_smart_retry: ^6.0.0
+  pretty_dio_logger: ^1.4.0
 
 dev_dependencies:
   flutter_test:
